TAG: seqcacheload-5-1-6-1
DATE: 01/23/2014
STAFF: lec
CHANGES:
1) TR11555/Configuration, seqmarker.py - update biotype equivalency mapping
for ensembl 74

TAG: seqcacheload-5-1-5-1
DATE: 12/11/2013
STAFF: lec
CHANGES:
1) TR11528/Configuration, seqmarker.py - update biotype equivalency mapping

TAG: seqcacheload-5-1-3-1
TAG: seqcacheload-5-1-2-1
DATE: 04/16/2013
STAFF: sc
CHANGES: N2MO - merge tr6519 branch to trunk

TAG: seqcacheload-tr6519-BP
DATE: 03/01/2013
STAFF: dbm
CHANGES: N2MO Branch Point

TAG: seqcacheload-5-1-1-2
DATE: 11/08/2012
STAFF: sc
CHANGES: seqmarker.py - remove some debug
C4AM/B38 release

TAG: seqcacheload-5-1-1-1
DATE: 11/06/2012
STAFF: dbm
CHANGES:
C4AM/B38 release

TAG: seqcacheload-tr7106-4
TAG: seqcacheload-tr7106-3
DATE: 10/08/2012
STAFF: sc
CHANGES:
1) Configuration - US155 update biotype equivalency mapping again for miscRNA,
	misc_RNA, and scRNA.
2) seqmarker.py - add mapping to gene and pseudogenic region
        via translation table, so the direct or indirect annotations to these
        terms no longer cause conflict
3) left debug print statements in on purpose

TAG: seqcacheload-tr7106-2
TAG: seqcacheload-tr7106-1
DATE: 09/19/2012
STAFF: sc
CHANGES: 
1) Configuration - US155 update biotype equivalency mapping - split ensembl
   into two config settings (too long for one)
2) seqmarker.py - catenate two ensembl config settings. Update loading
   of Ensembl and VEGA to handle 'all feature types' which implies equiv
   to all its children as well. We have a new mapping for VEGA to 'all
   feature types, but not any for ensembl .... yet. 

TAG: seqcacheload-tr7106-BP
DATE: 09/19/2012
STAFF: sc
CHANGES: CFAM/Build38 Branch Point

TAG: seqcacheload-5-0-0-3
DATE: 08/14/2012
STAFF: sc
CHANGES: TR11098 - new round of biotype conflict mapping 

TAG: seqcacheload-5-0-0-2
TAG: seqcacheload-5-0-0-1
DATE: 05/05/2012
STAFF: sc
CHANGES: TR11098 biotype conflict mapping update

TAG: seqcacheload-4-4-2-2
DATE: 03/19/2012
STAFF: sc